--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,34 @@
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.default_schema=public
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/flynote
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+server.port=8888
+server.tomcat.uri-encoding=UTF-8
+server.messages.encoding=UTF-8
+server.http.encoding.charset=UTF-8
+
+security.basic.enabled=false
+
+
 calculator.avg = true
 calculator.sum = true
 calculator.min = true
 calculator.max = true
+
+checkers.length.enabled = true
+checkers.length = 100
+
+checkers.sum.enabled = true
+checkers.sum = 42
+
+checkers.queue.enabled = true
+checkers.queue = 666
+
+checkers.avg.enabled = true
+checkers.avg = 3
