--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.default_schema=public
-#spring.jpa.database=POSTGRESQL
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-#
-#spring.datasource.url=jdbc:postgresql://localhost:5432/flynote
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username= postgres
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8888
 server.tomcat.uri-encoding=UTF-8
@@ -32,3 +29,8 @@ checkers.queue = 666
 
 checkers.avg.enabled = true
 checkers.avg = 3
+
+telegram.bot.token = ${TELEGRAM_BOT_TOKEN}
+telegram.chat.id = ${TELEGRAM_CHAT_ID}
+scheduler.summary.cron=0 7 0 * * ?
+
