--- a/pom.xml
+++ b/pom.xml
@@ -83,15 +83,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-test</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -119,12 +118,6 @@
 							<version>${javax-persistence.version}</version>
 						</path>
 					</annotationProcessorPaths>
-<!--					<compilerArgs>-->
-<!--						&lt;!&ndash; задание компонентной модели для сгенерированных мапперов по-умолчанию &ndash;&gt;-->
-<!--						<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>-->
-<!--						<arg>-Aquerydsl.entityAccessors=true</arg>-->
-<!--						<arg>-Aquerydsl.useFields=false</arg>-->
-<!--					</compilerArgs>-->
 				</configuration>
 			</plugin>
 		</plugins>
