--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username= postgres
 spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8888
@@ -12,22 +12,25 @@ server.http.encoding.charset=UTF-8
 
 security.basic.enabled=false
 
-calculator.avg = true
-calculator.sum = true
-calculator.min = true
-calculator.max = true
+calculator.avg=true
+calculator.sum=true
+calculator.min=true
+calculator.max=true
 
-checkers.sum.enabled = true
-checkers.sum = 42
+checkers.sum.enabled=true
+checkers.sum=42
 
-checkers.queue.enabled = true
-checkers.queue = 666
+checkers.queue.enabled=true
+checkers.queue=666
 
-checkers.avg.enabled = true
-checkers.avg = 3
+checkers.avg.enabled=true
+checkers.avg=3
 
-telegram.bot.token = ${TELEGRAM_BOT_TOKEN}
-telegram.chat.id = ${TELEGRAM_CHAT_ID}
+checkers.length.enabled=true
+checkers.length=100
+
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+telegram.chat.id=${TELEGRAM_CHAT_ID}
 
 scheduler.summary.cron=0 7 0 * * ?
 
